--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "patgo",
   "version": "1.0.0",
   "description": "Goroutines in Javascript",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node .",
     "test": "npx jest"
